# river-crossing-ip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/formulation/: classic.md  common.md  dr_stone.md
examples/: classic.yaml  dr_stone.yaml
runner/: animate.py  display.py  solve.py
runner/animation/: __init__.py  draw.py  export.py  layout.py  phases.py
src/river_crossing_ip/: __init__.py  engine.py  types.py
src/river_crossing_ip/build_model/: __init__.py  builder.py  indices.py
src/river_crossing_ip/build_model/constraints/: __init__.py  classic.py  common.py  dr_stone.py  handler.py
src/river_crossing_ip/load_data/: __init__.py  spec_loader.py
src/river_crossing_ip/solve/: __init__.py  result.py  solver.py
tests/: test_animation_dr_stone.py  test_engine_classic.py  test_engine_dr_stone.py
