[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "river-crossing-ip"
version = "0.1.0"
description = "River crossing puzzles solved via integer programming (Pyomo + HiGHS)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyomo>=6.7.0",
  "highspy>=1.7.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.14.0",
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["river_crossing_ip*"]

[tool.ruff]
line-length = 88
target-version = "py310"
indent-width = 4
